--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ $(function() {
   <div class="headertitle"><div class="title">RSGL Documentation</div></div>
 </div><!--header-->
 <div class="contents">
+RSGL is a modern modular simple-to-use cross-platform GUI library for easily creating GUI apps and games. It combines the freedom of lower-level GUI libraries with the convenience and simplicity of modern GUI libraries and modern c++, and includes an optional single header file. 
 </div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
