--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <table cellspacing="0" cellpadding="0">
  <tbody>
  <tr id="projectrow">
-  <td id="projectlogo"><img alt="Logo" src="logo.png"/></td>
+  <td id="projectlogo"><img alt="The RSGL Logo" src="logo.png"/></td>
   <td id="projectalign">
    <div id="projectname">RSGL
    </div>
